# multigrid

./: CMakeLists.txt
multigrid/: CMakeLists.txt  config.hpp.in
multigrid/details/: Coordinate.hpp  Euclidean.hpp  FixedHalo.hpp  FixedShape.hpp  FixedSubgrid.hpp  Halo.hpp  Offset.hpp  Origin.hpp  Root.hpp  Shape.hpp  Spacing.hpp  Subgrid.hpp  Vec.hpp  import.hpp
multigrid_testing/: CMakeLists.txt  coordinate_test.cpp  fixed_subgrid_test.cpp  origin_test.cpp  root_test.cpp  spacing_test.cpp  test_macros.hpp  vec_test.cpp
